# Spectrum-Orchestration-Environment-

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  design.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  requirements.txt  spectrum_environment.py
src/: environment.py  scoring.py  train.py
tests/: test_environment.py
